--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -31,7 +31,7 @@
     <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
             <a class="nav-link" th:href="@{/}">
-                <i class="fa fa-paper-plane">&nbsp;&nbsp;newbee-mall首页</i>
+                <i class="fa fa-paper-plane">&nbsp;&nbsp;GDUFE--电商后台管理首页</i>
             </a>
         </li>
         <li class="nav-item dropdown">
@@ -42,17 +42,17 @@
                 <div class="dropdown-divider"></div>
                 <a href="#" class="dropdown-item">
                     <i class="fa fa-user-o mr-2"></i> 姓名
-                    <span class="float-right text-muted text-sm">十三 / 13</span>
+                    <span class="float-right text-muted text-sm">林廷炫 / 13</span>
                 </a>
                 <div class="dropdown-divider"></div>
                 <a href="#" class="dropdown-item">
                     <i class="fa fa-user-secret mr-2"></i> 身份
-                    <span class="float-right text-muted text-sm">Java开发工程师</span>
+                    <span class="float-right text-muted text-sm">Java后端开发工程师</span>
                 </a>
                 <div class="dropdown-divider"></div>
                 <a href="#" class="dropdown-item">
                     <i class="fa fa-address-card mr-2"></i> 邮箱
-                    <span class="float-right text-muted text-sm">2449207463@qq.com</span>
+                    <span class="float-right text-muted text-sm">1179443280@qq.com</span>
                 </a>
             </div>
         </li>
